--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,8 @@ h3 {
 }
 
 .profilePic {
-	margin: 0 15px 10px 0;
+	width: 100%;
+	margin: 10px 0;
 }
 
 .about {
@@ -275,4 +276,21 @@ input[type=submit]:hover {
 	padding: 10px 20px;
 	font-weight: bold;
 	cursor: pointer;	
+}
+
+@media screen and (max-width: 980px) {
+	
+
+}
+
+@media screen and (max-width: 768px) {
+	
+
+}
+
+@media screen and (max-width: 640px) {
+	header {
+		position: static;
+	}	
+
 }
