--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,44 @@ input[type=submit]:hover {
 }
 
 @media screen and (max-width: 768px) {
+	.mainContent {
+		float: none;
+		width: 90%;
+		margin: 20px;
+	}
+
+	.content {
+		width: 100%;
+	}
+
+	.sidebar {
+		margin: 20px;
+		width: 90%;
+	}
+
+
+	.profilePic {
+		float: left;
+		width: 350px;
+		height: 270px;
+		margin: 0 20px 10px;
+	}
+
+	nav {
+		margin-left: 200px;
+	}
+
+	footer {
+		width: 100%;
+	}
+
+	h3 {
+		text-align: initial;
+	}
 	
+	.links {
+		width: 90%;
+	}
 
 }
 
@@ -292,5 +329,9 @@ input[type=submit]:hover {
 	header {
 		position: static;
 	}	
+
+	.profilePic {
+		float: none;
+	}
 
 }
