--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,8 +178,8 @@ section div p {
 }
 
 .portLnk {
-	height: 150px;
-	width: 25%;
+	height: 400px;
+	width: 90%;
 	margin: 25px;
 	
 }
@@ -189,6 +189,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+
 }
 
 #linkTwo {
@@ -196,6 +197,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+
 }
 
 #lnkThree {
@@ -203,6 +205,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+
 }
 
 #lnkFour {
@@ -210,6 +213,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+
 }
 
 #lnkFive {
@@ -217,6 +221,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+
 }
 
 #lnkSix {
@@ -224,6 +229,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+
 }
 
 .portButton {
@@ -279,7 +285,8 @@ input[type=submit]:hover {
 }
 
 @media screen and (max-width: 980px) {
-	
+		
+
 
 }
 
@@ -323,6 +330,42 @@ input[type=submit]:hover {
 		width: 90%;
 	}
 
+	.portLnk {
+	height: 150px;
+	width: 25%;
+	
+	}
+
+	#lnkOne {
+		float: left;
+
+	}
+
+	#linkTwo {
+		float: left;
+
+	}
+
+	#lnkThree {
+		float: left;
+
+	}
+
+	#lnkFour {
+		float: left;
+
+	}
+
+	#lnkFive {
+		float: left;
+
+	}
+
+	#lnkSix {
+		float: left;
+
+	}
+
 }
 
 @media screen and (max-width: 640px) {
@@ -340,7 +383,7 @@ input[type=submit]:hover {
 
 	.profilePic {
 		float: none;
-		width: 90%;
+		width: 100%;
 		margin: 0;
 		height: auto;
 	}
@@ -348,8 +391,46 @@ input[type=submit]:hover {
 	body {
 		margin-bottom: 80px;
 	}
-	
+
 	footer {
 		margin-bottom: 10px;
 	}
+
+	.portLnk {
+	height: 300px;
+	width: 90%;
+
+	}
+
+	#lnkOne {
+		float: none;
+
+	}
+
+	#linkTwo {
+		float: none;
+
+	}
+
+	#lnkThree {
+		float: none;
+
+	}
+
+	#lnkFour {
+		float: none;
+
+	}
+
+	#lnkFive {
+		float: none;
+
+	}
+
+	#lnkSix {
+		float: none;
+
+	}
+
+
 }
