--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,17 @@ body {
 
 }
 
-header {
-	text-align: center;
-	border-bottom: 2px solid #cccccc;
-	background-color: #ffffff;
+@keyframes myHeaderAnimation {
+    from {background-color: #4aaaa5;}
+    to {background-color: #fff;}
+}
 
+header {
+  	text-align: center;
+	border-bottom: 2px solid #cccccc;  
+    background-color: #fff;
+    animation-name: myHeaderAnimation;
+    animation-duration: 4s;
 }
 
 main {
@@ -189,6 +195,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+	position: relative;
 
 }
 
@@ -197,6 +204,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+	position: relative;
 
 }
 
@@ -205,6 +213,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+	position: relative;
 
 }
 
@@ -213,6 +222,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+	position: relative;
 
 }
 
@@ -221,6 +231,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+	position: relative;
 
 }
 
@@ -229,6 +240,7 @@ section div p {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+	position: relative;
 
 }
 
@@ -238,7 +250,8 @@ section div p {
 	background-color: #4aaaa5;
 	width:100%;
 	height: 28px;
-	margin-top: 100px;
+	bottom: 0;
+	position: absolute;
 	padding-top: 12px;
 }
 
